// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can handle NUL byte in content 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  bytesTransferred: 16
  target: Uint8Array [
    │0x00000000│ 4E 45 53 1A 02 02 11 00 00 00 00 00 00 00 00 00
  ]
}
",
}
`;

exports[`string -> existing Uint8Array (exact size) 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  bytesTransferred: 13
  target: Uint8Array [
    │0x00000000│ 48 65 6C 6C 6F 2C 20 77 6F 72 6C 64 21
  ]
}
",
}
`;

exports[`string -> existing Uint8Array (larger; overwrites but leaves existing data alone) 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  bytesTransferred: 13
  target: Uint8Array [
    │0x00000000│ 48 65 6C 6C 6F 2C 20 77 6F 72 6C 64 21 01 01 01
    │0x00000010│ 01
  ]
}
",
}
`;

exports[`string -> existing Uint8Array (smaller; truncates) 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  bytesTransferred: 9
  target: Uint8Array [
    │0x00000000│ 48 65 6C 6C 6F 2C 20 77 6F
  ]
}
",
}
`;

exports[`string -> new Uint8Array 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  bytesTransferred: 13
  target: Uint8Array [
    │0x00000000│ 48 65 6C 6C 6F 2C 20 77 6F 72 6C 64 21
  ]
}
",
}
`;
